Agrego meta theme-color morado clásico en index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>  <html>  
 <head>
 <link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#1976d2">
+<meta name="theme-color" content="#6f42c1">
 <link rel="icon" href="192.png">
   <title>Test JS con Eruda</title>  
 </head>  
