--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
-<!DOCTYPE html>  <html>  
+<!DOCTYPE html>
+<html lang="es">
 <head>
-<link rel="manifest" href="manifest.json">
-<meta name="theme-color" content="#6f42c1">
-<link rel="icon" href="192.png">
-  <title>Test JS con Eruda</title>  
-</head>  
-<body>  
-  <h2>Prueba de JavaScript con Eruda (CDN)</h2>    <button onclick="document.body.style.backgroundColor='lightblue'">  
-    Cambiar color  
-  </button>  <button onclick="alert('¡Alerta funcionando!')">Mostrar alerta</button>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#6f42c1">
+  <link rel="icon" href="192.png">
+  <title>Test JS con Eruda</title>
+</head>
+<body>
+  <h2>Prueba de JavaScript con Eruda (CDN)</h2>
+  
+  <button onclick="document.body.style.backgroundColor='lightblue'">Cambiar color</button>
+  <button onclick="alert('¡Alerta funcionando!')">Mostrar alerta</button>
 
-  <script>  
-    console.log("✅ JavaScript funcionando en WebView");  
-    alert("Hola, tu WebView tiene JavaScript activo 🎉");  
-    <script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('sw.js')
-      .then(reg => console.log('Service Worker registrado ✅'))
-      .catch(err => console.log('Error al registrar Service Worker:', err));
-  }
-</script>
-  </script>    <!-- Eruda desde CDN -->    <script src="https://cdn.jsdelivr.net/npm/eruda"></script>    <script>eruda.init();</script>  </body>  
+  <script>
+    console.log("✅ JavaScript funcionando en WebView");
+    alert("Hola, tu WebView tiene JavaScript activo 🎉");
+  </script>
+
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('./sw.js')
+        .then(reg => console.log('Service Worker registrado ✅', reg))
+        .catch(err => console.error('Error al registrar Service Worker:', err));
+    }
+  </script>
+
+  <!-- Eruda desde CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
+</body>
 </html>
