--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Una pequeña app web para probar JavaScript y Eruda, compatible offline.">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#6f42c1">
   <link rel="icon" href="192.png">
+  <link rel="apple-touch-icon" href="192.png">
   <title>Test JS con Eruda</title>
 </head>
 <body>
@@ -16,7 +18,6 @@
 
   <script>
     console.log("✅ JavaScript funcionando en WebView");
-    alert("Hola, tu WebView tiene JavaScript activo 🎉");
   </script>
 
   <script>
